--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "test": "test"
   },
+  "bin": {
+    "txrouter": "bin/txrouter"
+  },
   "scripts": {
     "test": "npm run test"
   },
@@ -24,7 +27,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "amqplib": "^0.6.0",
-    "has-value": "^2.0.2"
+    "commander": "^6.2.0",
+    "crypto-js": "^4.0.0",
+    "del": "^6.0.0",
+    "has-value": "^2.0.2",
+    "input": "^1.0.1",
+    "js-base64": "^3.6.0",
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
