--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/iopanda/txrouter-nodejs"
   },
   "keywords": [
     "distributed",
